# turtlebot3_multi_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch_multi_nav2.sh  package.xml  requirements.txt  setup.py
config/: robots.yaml
docker/: Dockerfile  entrypoint.sh
env-hooks/: multi_robot.dsv.in
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/monitor_position/lib/monitor_position/: monitor_position
install/monitor_position/share/monitor_position/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/monitor_position/share/monitor_position/launch/: monitor_position_launch.py
install/turtlebot3_multi_robot/share/ament_index/resource_index/package_run_dependencies/: turtlebot3_multi_robot
install/turtlebot3_multi_robot/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_multi_robot
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/cmake/: turtlebot3_multi_robotConfig-version.cmake  turtlebot3_multi_robotConfig.cmake
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  multi_robot.dsv  path.dsv  path.sh
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py  gazebo_multi_world.launch.py  multi_nav2_monitor.launch.py
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/models/turtlebot3_burger/: model-1_4.sdf  model.config  model.sdf
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/models/turtlebot3_burger/meshes/: burger_base.dae  lds.dae  tire.dae
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/models/turtlebot3_waffle/: model-1_4.sdf  model.config  model.sdf  model_nocamera.sdf
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/models/turtlebot3_waffle/meshes/: lds.dae  r200.dae  tire.dae  waffle_base.dae
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/params/: nav2_params.yaml
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/rviz/: multi_nav2_default_view.rviz  nav2_default_view.rviz
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/urdf/: common_properties.urdf  turtlebot3_burger.urdf  turtlebot3_waffle.urdf
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/worlds/: multi_empty_world.world  multi_robot_world.world
launch/: drive.launch.py  gazebo_multi_nav2_world.launch.py  gazebo_multi_world.launch copy.py  gazebo_multi_world.launch.py  tb3_nav2.launch.py  tb3_world.launch.py
launch/launch_helpers/: initial_pose.py
launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
log/: latest_build
models/multi_turtlebot3_burger/: model.sdf
models/turtlebot3_burger/: model-1_4.sdf  model.config  model.sdf
models/turtlebot3_waffle/: model.sdf
multi_robot_scripts/: turtlebot3_drive.py  utils.py
params/: burger_bridge.yaml  burger_nav2_params.yaml  nav2_params.yaml  nav2_params_tb1.yaml  nav2_params_tb2.yaml  turtlebot3_waffle_bridge.yaml  waffle_bridge.yaml  waffle_nav2_params.yaml  waffle_pi.yaml  waffle_pi_bridge.yaml
rviz/: tb3_navigation2.rviz
src/collision_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/collision_detector/collision_detector/: collision_detector.py
src/collision_detector/launch/: collision_detector.launch.py
src/monitor_position/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/monitor_position/launch/: monitor_position_launch.py
src/monitor_position/monitor_position/: monitor_position.py
src/turtlebot3_multi_robot/env-hooks/: multi_robot.dsv.in
src/turtlebot3_multi_robot/launch/: gazebo_multi_world.launch.py  multi_nav2_monitor.launch.py
src/turtlebot3_multi_robot/models/turtlebot3_waffle/: model_nocamera.sdf
src/turtlebot3_multi_robot/rviz/: multi_nav2_default_view.rviz
src/twist_waypoint_follower/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/twist_waypoint_follower/launch/: twist_waypoint_follower.launch.py
src/twist_waypoint_follower/twist_waypoint_follower/: twist_waypoint_follower.py
urdf/: turtlebot3_burger.urdf
worlds/: Sun  multi_empty_world.world  multi_robot_world.world
