<?xml version="1.0"?>
<package format="3">
  <name>monitor_position</name>
  <version>0.0.1</version>
  <description>The monitor_position package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Use ament_python for Python-based packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies required by your package -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
